Fixing bug 318106. Stop assertion about setting mutation bits on outer window. r+sr=bzbarsky@mit.edu